--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.20.1",
     "@t3-oss/env-nextjs": "^0.13.4",
     "drizzle-orm": "^0.43.1",
     "next": "15.3.2",
