--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.43.1",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
@@ -32,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
 }
